first draft working

--- a/test7 - OO/plugins/VoxelPropertiesPack/VoxelPropertiesPack.csproj
+++ b/test7 - OO/plugins/VoxelPropertiesPack/VoxelPropertiesPack.csproj
@@ -29,7 +29,9 @@
     <Reference Include="VVVV.Utils3rdParty" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColorProperties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SurfaceProperties.cs" />
     <Compile Include="VoxelPropertiesPackNode.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
